# wealth-ops

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml
.agent/rules/: 00-constitution.md  10-stack-aws.md  20-code-standards.md
.agent/workflows/: run-tests.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  GAP_ANALYSIS.md  PHILOSOPHY.md  ROADMAP.md
infra/: app.py  cdk.json
infra/stacks/: foundation_stack.py
scripts/: run-tests-docker.sh  seed_profiles.py  tune_spy.py
specs/: data-ingestion-strategy.md  ml-compute-strategy.md  phase-0-infrastructure.md
src/: __init__.py
src/lambdas/: data_ingestion.py  telegram_webhook.py
src/modules/: __init__.py
src/modules/backtest/: engine.py  splitter.py  types.py
src/modules/data/: __init__.py  earnings_manager.py  economic_calendar_manager.py  macro_manager.py  manager.py  protocols.py
src/modules/data/providers/: __init__.py  fed_calendar_provider.py  fred.py  tiingo.py  tiingo_earnings.py  tiingo_forex.py  yahoo.py
src/modules/features/: __init__.py  engine.py
src/modules/features/indicators/: __init__.py  candle.py  momentum.py  price.py  relative_strength.py  trend.py  volatility.py  volume.py
src/modules/notifications/: commands.py  telegram.py
src/modules/regime/: __init__.py  filter.py
src/modules/signals/: __init__.py  components.py  momentum_composite.py
src/modules/training/: tuner.py  types.py
src/shared/: config.py  logger.py  profiles.py
tests/: test_commands.py  test_config.py  test_data_manager.py  test_earnings_manager.py  test_economic_calendar_manager.py  test_fed_calendar_provider.py  test_fred.py  test_logger.py  test_macro_manager.py  test_placeholder.py  test_profiles.py  test_profiles_coverage.py  test_regime_filter.py  test_telegram.py  test_telegram_webhook.py  test_tiingo.py  test_tiingo_earnings.py  test_tiingo_forex.py  test_yahoo.py
tests/modules/backtest/: test_engine.py  test_splitter.py  test_types_coverage.py
tests/modules/training/: test_tuner.py
tests/test_features/: __init__.py  conftest.py  test_engine.py  test_indicators.py
tests/test_lambdas/: test_handlers.py
tests/test_signals/: conftest.py  test_components.py  test_momentum_composite.py
